# test-mail-server

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_RULES.md  LICENSE  README.md  email_seeder.py  pyproject.toml  setup.cfg  setup.sh  uninstall.sh
docker-imap/: create_certs.py  docker-compose.yml
