[project]
name = "test_mail_server"
version = "0.1.0"
description = "A test mail server with certificate generation and Docker support."
authors = [
    { name = "Tony Philip", email = "tonyphilip@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "cryptography"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"