[metadata]
name = test-mail-server
version = 0.1.0
license = MIT
description = Docker local mail server plus LLM-driven IMAP seeder
long_description = file: README.md
long_description_content_type = text/markdown
author = Tony Philip

[options]
py_modules = email_seeder
python_requires = >=3.10
install_requires =
    cryptography
    requests>=2.31.0

[options.entry_points]
console_scripts =
    email-seeder = email_seeder:main

[flake8]
max-line-length = 100
extend-ignore = E203
